// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NetworkError > serialisation > should serialise to json with custom options 1`] = `
{
  "code": "custom_code",
  "data": {
    "value": "data",
  },
  "debug": {
    "value": "debug",
  },
  "details": "details",
  "errors": [],
  "id": "aaf972cc-6fbf-54c3-8706-2bea9fb0c1d4",
  "message": "message",
  "name": "NetworkError",
  "stack": StringContaining "NetworkError: message",
  "status": -1,
  "support": "56d82695bdbb3aab55ef",
  "timestamp": 2024-01-01T08:00:00.000Z,
  "title": "title",
}
`;

exports[`NetworkError > serialisation > should serialise to json with default values 1`] = `
{
  "code": null,
  "data": {},
  "debug": {},
  "details": null,
  "errors": [],
  "id": "aaf972cc-6fbf-54c3-8706-2bea9fb0c1d4",
  "message": "message",
  "name": "NetworkError",
  "stack": StringContaining "NetworkError: message",
  "status": -1,
  "support": null,
  "timestamp": 2024-01-01T08:00:00.000Z,
  "title": null,
}
`;
